--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.0.1",
-        "arielmejiadev/larapex-charts": "1.4.3"
+        "phpunit/phpunit": "^11.0.1"
+        
     },
     "autoload": {
         "psr-4": {
