--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,23 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
+    "name": "arielmejiadev/larapex-charts",
+    "description": "Package to provide easy api to build apex charts on Laravel",
+    "keywords": [
+        "arielmejiadev",
+        "larapex",
+        "charts",
+        "apexcharts"
+    ],
+    "homepage": "https://larapex-charts.netlify.app/",
+    "license": "MIT",
+    "type": "library",
+    "authors": [
+        {
+            "name": "ArielMejiaDev",
+            "email": "arielmejiadev@gmail.com"
+        }
+    ],
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
